k8s/microservices/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-grpc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-grpc
  template:
    metadata:
      labels:
        app: client-grpc
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: client-grpc
        image: mpetke/client-grpc
        imagePullPolicy: Always
