k8s/microservices/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-grpc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-grpc
  template:
    metadata:
      labels:
        app: echo-grpc
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: echo-grpc
        image: mpetke/echo-grpc
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8081"]
          initialDelaySeconds: 1
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8081"]
          initialDelaySeconds: 1
