k8s/microservices/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-grpc
spec:
  selector:
    app: client-grpc
  type: ClusterIP
  ports:
  - name: none
    protocol: TCP
    port: 8085
    targetPort: 80
