k8s/microservices/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-grpc
spec:
  selector:
    app: echo-grpc
  type: ClusterIP
  ports:
  - name: http2-echo
    protocol: TCP
    port: 8081
