k8s/microservices/ambassador-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ambassador
  name: aes-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /client
          backend:
            serviceName: client-grpc
            servicePort: 8085
